--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,3 +6,11 @@
     color: cadetblue;
     background-color: white;
 }
+#registerbtn{
+    color: cadetblue;
+    background-color: white;
+}
+#registerbtn:hover{
+    color: white;
+    background-color: cadetblue;
+}
