--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,40 +1,48 @@
 <h1></h1>
-    <div class="container-fluid h-custom">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-md-9 col-lg-6 col-xl-5">
-                <img src="https://images.pexels.com/photos/5797908/pexels-photo-5797908.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500" class="img-fluid" alt="Sample image">
-            </div>
-            <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
-                <h1 >Get Started</h1>
+<div class="container-fluid h-custom">
+    <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-md-9 col-lg-6 col-xl-5">
+            <img src="https://images.pexels.com/photos/5797908/pexels-photo-5797908.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500"
+                class="img-fluid" alt="Sample image">
+        </div>
+        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+            <h1>Get Started</h1>
 
-                <form #f="ngForm" (ngSubmit)="toLogin(f.value)">
+            <form #f="ngForm" (ngSubmit)="toLogin(f.value)">
 
-                    <div class="divider d-flex align-items-center my-4">
-                        
+                <div class="divider d-flex align-items-center my-4">
+
+                </div>
+
+                <!-- Email input -->
+                <div class="form-outline mb-4">
+                    <input #email="ngModel" ngModel type="email" name="email" id="email"
+                        class="form-control form-control-lg" placeholder="Enter a valid email address" />
+                    <label class="form-label" for="log">Email address</label>
+                </div>
+
+                <!-- Password input -->
+                <div class="form-outline mb-3">
+                    <input #passeword="ngModel" ngModel type="passeword" name="passeword" id="form3Example4"
+                        class="form-control form-control-lg" placeholder="Enter password" />
+                    <label class="form-label" for="pasw">Password</label>
+                </div>
+
+                <div class="d-flex justify-content-between align-items-center">
+                    <div class="text-center text-lg-start mt-4 pt-2">
+                        <button class="btn btn-primary btn-lg"
+                            style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign in</button>
+                            <span>  |  </span>
+                        <button [routerLink]="['register']" class="btn btn-primary btn-lg"
+                            style="padding-left: 2.5rem; padding-right: 2.5rem;">Sign up</button>
                     </div>
+                    <div class="text-center text-lg-start mt-4 pt-2">
 
-                    <!-- Email input -->
-                    <div class="form-outline mb-4">
-                        <input #email="ngModel" ngModel type="email" name="email" id="email" class="form-control form-control-lg"
-                            placeholder="Enter a valid email address" />
-                        <label class="form-label" for="log">Email address</label>
                     </div>
+                </div>
 
-                    <!-- Password input -->
-                    <div class="form-outline mb-3">
-                        <input #passeword="ngModel" ngModel type="passeword" name="passeword" id="form3Example4" class="form-control form-control-lg"
-                            placeholder="Enter password" />
-                        <label class="form-label" for="pasw">Password</label>
-                    </div>
 
-                    <div class="d-flex justify-content-between align-items-center">
-                        <div class="text-center text-lg-start mt-4 pt-2">
-                            <button class="btn btn-primary btn-lg"
-                                style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
-                        </div>
-                    </div>
-                </form>
-            </div>
+            </form>
         </div>
     </div>
-
+</div>
