--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,24 +1,26 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" >My list</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-            <a class="nav-link" [routerLink]="['']" routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}" >To Do</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['done']" routerLinkActive="active">Done</a>
-          </li>
-        <li class="nav-item ">
-          <a class="nav-link" [routerLink]="['login']" routerLinkActive="active">Login </a>
-        </li>
-        <li class="nav-item ">
-            <a class="nav-link" >Logout </a>
-          </li>
-     
-      </ul>
-     
-    </div>
-  </nav>
+  <a class="navbar-brand">My list</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
+    aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav mr-auto">
+      <li *ngIf="iLogging()" class="nav-item">
+        <a class="nav-link" [routerLink]="['']" routerLinkActive="active" [routerLinkActiveOptions]="{exact : true}">To
+          Do</a>
+      </li>
+      <li *ngIf="iLogging()" class="nav-item">
+        <a class="nav-link" [routerLink]="['done']" routerLinkActive="active">Done</a>
+      </li>
+      <li *ngIf="!iLogging()" class="nav-item ">
+        <a class="nav-link" [routerLink]="['login']" routerLinkActive="active">Login </a>
+      </li>
+      <li *ngIf="iLogging()" class="nav-item ">
+        <a (click)="logout()" class="nav-link" routerLinkActive="active">Logout </a>
+      </li>
+
+    </ul>
+
+  </div>
+</nav>
